After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 766041 - Vim mode: search entry text not set properly after second use of * or #
Vim mode: search entry text not set properly after second use of * or #
Status: RESOLVED FIXED
Product: gnome-builder
Classification: Other
Component: editor
3.21.x
Other Linux
: Normal normal
: ---
Assigned To: GNOME Builder Maintainers
GNOME Builder Maintainers
Depends on:
Blocks:
 
 
Reported: 2016-05-06 01:53 UTC by Fangwen Yu
Modified: 2016-05-06 05:42 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Vim mode: fix search entry history (1.61 KB, patch)
2016-05-06 01:56 UTC, Fangwen Yu
committed Details | Review

Description Fangwen Yu 2016-05-06 01:53:44 UTC
In Vim mode, after the second use of * (or #), the search entry text is not set properly.

How to reproduce:

1) Open a new file, type a few "hello".

2) Hit *, then /, the search entry will show "hello", backspace to delete it, hit Esc to dismiss the search entry

3) Do another * search, hit /, now the search entry is empty (should contain "hello").
Comment 1 Fangwen Yu 2016-05-06 01:56:13 UTC
Created attachment 327361 [details] [review]
Vim mode: fix search entry history
Comment 2 Christian Hergert 2016-05-06 05:42:28 UTC
Attachment 327361 [details] pushed as 2f835a5 - Vim mode: fix search entry history