Vim mode: fix search entry history

https://bugzilla.gnome.org/show_bug.cgi?id=766041